--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "create-esyt",
-  "version": "13.0.2",
+  "version": "13.1.3",
   "description": "A tool to create a new esyt project with your preferred stack",
   "main": "cli.js",
   "bin": {
     "esyt": "cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./tests/test-flags.js"
   },
   "keywords": [
     "esyt",
@@ -37,4 +37,6 @@
     "inquirer": "^12.5.0"
   },
   "type": "module"
+  ,
+  "preferGlobal": true
 }
